Formatted Login Page

--- a/HiveMind/login.html
+++ b/HiveMind/login.html
@@ -35,12 +35,19 @@
         }
 
         .center-rectangle {
-            width: 100vh;
-            height: 60vh;
+            margin-top: 5%;
+            width: 70%;
+            height: 70%;
             background-color: #E2D2A3;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            flex-direction: row;
+            justify-content: right;
+        }
+
+        .email-login {
+            background-color: white;
+            height: 100%;
+            width: 60%;
         }
     </style>
 
@@ -54,7 +61,9 @@
     </div>
 
     <div class="center-rectangle">
-        <p>Centered Content</p>
+        <div class="email-login">
+
+        </div>
     </div>
 
 </body>
