--- a/HiveMind/login.html
+++ b/HiveMind/login.html
@@ -37,11 +37,10 @@
         .center-rectangle {
             margin-top: 5%;
             width: 70%;
-            height: 70%;
+            height: 75%;
             background-color: #E2D2A3;
             display: flex;
             flex-direction: row;
-            justify-content: right;
         }
 
         .email-login {
@@ -49,6 +48,39 @@
             height: 100%;
             width: 60%;
         }
+
+        .continue-embeds {
+            background-color: #E2D2A3;
+            ;
+            height: 100%;
+            width: 40%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
+        }
+
+        .continue-embeds img:first-of-type {
+            width: 69%;
+            height: 56%;
+            padding-bottom: 8%;
+        }
+
+        .continue-embeds img:nth-of-type(2), .continue-embeds img:nth-of-type(3) {
+
+            height: 10%;
+            width: 66%;
+            padding-bottom: 3%;
+            
+
+        }
+
+        .continue-embeds img:nth-of-type(4) {
+            height: 8%;
+            width: 65%;
+            padding-bottom: 10%;
+        }
+
     </style>
 
 </head>
@@ -56,14 +88,26 @@
 <body>
 
     <div class="navbar">
-        <img src="https://cdn.discordapp.com/attachments/1280995025114890351/1297710838580510760/HiveMindd2.png?ex=6718e526&is=671793a6&hm=1c4e65d72861b75db0c2bf316d03b1719d775ecd2cdef3b9fa591ec0b39c2c6f&"
-            alt="Icon">
+        <img src="https://i.ibb.co/cL3324b/Hive-Mindd2.png" alt="HiveMind Logo">
     </div>
 
     <div class="center-rectangle">
+
+        <div class="continue-embeds">
+
+            <img src="https://i.ibb.co/cL3324b/Hive-Mindd2.png" alt="HiveMind Logo">
+
+            <img class="continue" src="https://i.ibb.co/7N8qZvS/googlecontinue.png" alt="googlecontinue" border="0"></a>
+            <img class="continue" src="https://i.ibb.co/ctt3P2h/applecontinue.png" alt="applecontinue" border="0"></a>
+            <img class="continue" src="https://i.ibb.co/TtSMbtG/facebookcontinue.png" alt="facebookcontinue"
+                border="0"></a>
+
+        </div>
+
         <div class="email-login">
 
         </div>
+
     </div>
 
 </body>
