--- a/prototype/tasks/taskboard/taskboard.html
+++ b/prototype/tasks/taskboard/taskboard.html
@@ -15,7 +15,7 @@
 
         <div class="content-wrapper">
             <div class="new-note">
-                <img src="" alt="plus icon">
+                <img src="icons/plus.svg" alt="plus icon">
                 <p>New Note</p>
             </div>
             <div class="card">
